syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "storage/schedule.proto";

import "protobuf/gogoproto/gogo.proto";

package storage;

message ExternalBackup {
    string           id              = 1;
    string           name            = 2;
    string           type            = 3;
    storage.Schedule schedule        = 4;
    int32            backups_to_keep = 5;

    oneof Config {
        S3Config       s3       = 6;
        GCSConfig      gcs      = 7;
    }
}

message S3Config {
    string bucket            = 1;
    bool   use_iam           = 2;
    string access_key_id     = 3;
    string secret_access_key = 4 [(gogoproto.moretags) = "scrub:\"always\""];
    string region            = 5;
    string object_prefix     = 6;
    string endpoint          = 7;
}

message GCSConfig {
    string bucket            = 1;
    string service_account   = 2 [(gogoproto.moretags) = "scrub:\"always\""];
    string object_prefix     = 3;
}
